WIP fixing cell wrapping: fixed table layout

--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -4,6 +4,22 @@
   box-shadow: 0.1em 0.1em 0.2em $muted-graphic;
 }
 
+.flex {
+  display: flex;
+
+  &.items-center {
+    align-items: center;
+  }
+}
+
+.gap-sm {
+  gap: 0.5em;
+}
+
+.gap-md {
+  gap: 1em;
+}
+
 .flex-row-always {
   display: flex;
   flex-direction: row;
@@ -327,6 +343,12 @@ span.spoiler {
 
 .clearfix {
   overflow: hidden;
+}
+
+.table {
+  &.fixed {
+    table-layout: fixed;
+  }
 }
 
 .transparent {
